feat: Update project name and branding
Updates the project name in `package.json` and `metadata.json` from "Sprint Review 1 Hub" to "Grupo 2" to reflect the current project phase.

Introduces the Orbitron font for a more distinct display style and adds a custom cursor for enhanced user experience. Also, updates the available icons in `SprintHub.tsx` to be more descriptive of sprint content and adds text stroke utility for stylistic emphasis.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "inteli-x-asis---sprint-review-1-hub",
+  "name": "inteli-x-asis---grupo-2",
   "private": true,
   "version": "0.0.0",
   "type": "module",
